# propeller

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .lintstagedrc.js  .prettierrc.js  .rusty-hook.toml  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  package-lock.json  package.json  release.config.js
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/pipeline/: dockerBuild.sh  prepareCmd.sh
.github/workflow/: builds.yml
.github/workflows/: build.yml  pr.yml  release.yml
.husky/: commit-msg  pre-commit
dev/: Dockerfile-counterfact-argocd  config.yml  docker-compose.yml  podman.sh
dev/argo-cd/: configMap.yml  deployment.yml  kustomization.yaml  pre-sync.hook.yml
dev/postgres/: init.sql
docs/: application-architecture.puml  switch-workflow.puml
src/: argo_cd.rs  cli.rs  config.rs  database.rs  main.rs  password.rs  vault.rs  workflow.rs
src/internal/: argocd.rs  config.rs  mod.rs  random.rs  vault.rs
src/internal/argocd/: mod.rs
src/internal/database/: mod.rs  postgres.rs
src/internal/vault/: mod.rs
src/internal/workflow/: exchange.rs  mod.rs  rotate.rs
tests/: cli.rs  init_vault.rs  rotate.rs
tests/common/: mod.rs
tests/resources/: argocd.deployment.yml
tests/resources/config/: missing_argo_cd.yml  missing_postgresql.yml  missing_vault.yml
tests/resources/init_vault/: invalid_url.yml  new_path.yml
tests/resources/rotate/: invalid_initialized_secret.yml  non_existing_secret.yml  secrets.yml
tests/utilities/: Cargo.toml
tests/utilities/src/: lib.rs
