[package]
name = "propeller"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.6"
lazy_static = "1.5.0"
log = "0.4.27"
postgres = "0.19.10"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34+deprecated"
tokio = { version = "1.45.1", features = ["rt"] }
urlencoding = "2.1.3"
vaultrs = { version = "0.7.4", default-features = false, features = [ "native-tls" ] }

[dev-dependencies]
assert_cmd = "2.0.17"
ntest = "0.9.3"
predicates = "3.1.3"
schemars = "0.9.0"
testcontainers-modules = { version = "0.11.6", features = ["hashicorp_vault", "k3s", "postgres"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.12"
utilities = {path= "tests/utilities" }

[build-dependencies]
cross = "0.2.5"
