[package]
name = "utilities"
version = "0.0.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
futures = "0.3.30"
k8s-openapi = { version = "0.22.0", features = ["latest"] }
kube = { version = "0.94.0", features = ["client", "runtime", "rustls-tls", "ws"] }
rand = "0.9.0-alpha.2"
reqwest = { version = "0.12.7", features = ["json"] }
rustls = "0.23.12"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34+deprecated"
testcontainers-modules = { version = "0.10.0", features = ["hashicorp_vault", "k3s", "postgres"] }
tokio="1.40.0"
tokio-stream = { version = "0.1.16", features = ["net"] }
vaultrs = "0.7.2"
