[package]
name = "utilities"
version = "0.0.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
futures = "0.3.31"
k8s-openapi = { version = "0.27.0", features = ["latest"] }
kube = { version = "3.0.0", features = ["client", "runtime", "rustls-tls", "ws"] }
rand = "0.10.0"
reqwest = { version = "0.13.1", features = ["json"] }
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34+deprecated"
testcontainers-modules = { version = "0.14.0", features = ["hashicorp_vault", "k3s", "postgres"] }
tokio="1.49.0"
tokio-stream = { version = "0.1.18", features = ["net"] }
vaultrs = "0.7.4"
